fix sidebar dropdown button z-index

--- a/src/style.css
+++ b/src/style.css
@@ -63,6 +63,7 @@ h5 {
     width: 40px;
     height: 40px;
     border-radius: 8px;
+    z-index: 20;
 }
 
 .title-text {
